Fix to checkout to the respective cloned repos

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       with:
         ref: ${{github.head_ref}}
         fetch-depth: 0
+        repository: ${{github.head_repo}}
     - name: Build
       # Build JasmineGraph docker image
       run: docker build -t jasminegraph .
