--- a/conf/jasminegraph-server.properties
+++ b/conf/jasminegraph-server.properties
@@ -22,7 +22,7 @@ org.jasminegraph.server.host=localhost
 #Number of workers JasmineGraph cluster should use if it was not specified as a console argument
 org.jasminegraph.server.nworkers=2
 #org.jasminegraph.server.npartitions is the number of partitions into which the graph should be partitioned
-org.jasminegraph.server.npartitions=1
+org.jasminegraph.server.npartitions=2
 org.jasminegraph.server.streaming.kafka.host=127.0.0.1:9092
 #org.jasminegraph.server.runtime.location is the location where temporary files of JasmineGraph master is kept
 org.jasminegraph.server.runtime.location=./tmp
@@ -32,7 +32,7 @@ org.jasminegraph.worker.path=/var/tmp/jasminegraph/
 #if it is empty please leave a space, else it will cause an issue
 org.jasminegraph.artifact.path=
 #org.jasminegraph.partitioner.metis.bin is the location where the METIS graph partitioner's gpmetis executable is installed
-org.jasminegraph.partitioner.metis.bin=/home/ubuntu/software/metis/metis-5.1.0/bin
+org.jasminegraph.partitioner.metis.bin=/usr/local/bin
 #The following folder is the location where workers keep their data.
 #This is the location where the actual data storage takes place in JasmineGraph.
 org.jasminegraph.server.instance.datafolder=/var/tmp/jasminegraph-localstore
@@ -49,28 +49,6 @@ org.jasminegraph.server.nmon.snapshots=3000
 #This parameter holds the number of seconds between consecutive snapshots
 org.jasminegraph.server.nmon.snapshot.gap=6
 
-org.jasminegraph.server.modelDir=/var/tmp/jasminegraph-localstore/models/
-
-#--------------------------------------------------------------------------------
-#Federated Learning Parameters
-#--------------------------------------------------------------------------------
-
-org.jasminegraph.federated.enabled=true
-org.jasminegraph.fl.location=/home/ubuntu/software/jasminegraph/src-python/
-org.jasminegraph.fl.dataDir=/home/ubuntu/software/jasminegraph/src-python/data/
-org.jasminegraph.fl.weights=/home/ubuntu/software/jasminegraph/src-python/weights/
-org.jasminegraph.fl_clients=2
-org.jasminegraph.fl.epochs=4
-org.jasminegraph.fl.rounds=4
-org.jasminegraph.fl.org.port=5000
-org.jasminegraph.fl.num.orgs=1
-org.jasminegraph.fl.weights.file=/var/tmp/jasminegraph-localstore/weights.txt
-org.jasminegraph.fl.flag.file=/var/tmp/jasminegraph-localstore/flag.txt
-org.jasminegraph.fl.aggregator=true
-org.jasminegraph.fl.org.training=true
-org.jasminegraph.fl.organization.file=/home/ubuntu/software/jasminegraph/conf/orgs_details.txt
-
-#--------------------------------------------------------------------------------
 
 #Scheduler Specific Parameters
 org.jasminegraph.scheduler.enabled=false
@@ -80,7 +58,7 @@ org.jasminegraph.scheduler.performancecollector.timing=120
 #--------------------------------------------------------------------------------
 #MetaDB information
 #--------------------------------------------------------------------------------
-org.jasminegraph.centralstore.location=/home/tmp/centralstore
+org.jasminegraph.centralstore.location=/home/ubuntu/tmp/centralstore
 org.jasminegraph.db.location=./metadb/jasminegraph_meta.db
 org.jasminegraph.performance.db.location=./performancedb/jasminegraph_performance.db
 
