Fix build errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,19 @@ set(CMAKE_CXX_STANDARD 11)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 
+set(PYTHON_EXECUTABLE "/usr/bin/python3.8")
+set(PYTHON_INCLUDE_DIR "/usr/include/python3.8")
+set(PYTHON_LIBRARIES "/usr/lib/x86_64-linux-gnu/libpython3.8.so")
+
 include_directories("$ENV{HOME}/software/flatbuffers/include")
-include_directories("$ENV{HOME}/software/xerces/include")
+#include_directories("$ENV{HOME}/software/xerces/include")
 include_directories("$ENV{HOME}/software/spdlog/include")
 include_directories("$ENV{HOME}/software/jsoncpp/include")
 include_directories("$ENV{HOME}/software/cppkafka/include")
 include_directories("$ENV{HOME}/software/nlohmann_json/include")
 include_directories("$ENV{HOME}/local/include")
-include_directories("$ENV{HOME}/software/xerces-c-3.2.2/include")
+include_directories("/usr/local/include")
+#include_directories("$ENV{HOME}/software/xerces-c-3.2.2/include")
 include_directories(${PYTHON_INCLUDE_DIRS})
 include_directories(${PYTHON_DIRECTORIES})
 
@@ -59,8 +64,8 @@ if(CMAKE_ENABLE_DEBUG)
     target_compile_options(JasmineGraph PRIVATE -g)
 endif()
 
-target_link_libraries(JasmineGraph /usr/local/lib/libmetis.so)
-target_link_libraries(JasmineGraph /usr/local/lib/libxerces-c-3.2.so)
+#target_link_libraries(JasmineGraph /usr/local/lib/libmetis.so)
+target_link_libraries(JasmineGraph /usr/local/lib/libxerces-c.so)
 #TODO: Need to install the library separately
 target_link_libraries(JasmineGraph sqlite3)
 target_link_libraries(JasmineGraph pthread)
@@ -74,7 +79,3 @@ target_link_libraries(JasmineGraph $ENV{HOME}/software/jsoncpp/build/debug/src/l
 target_link_libraries(JasmineGraph /usr/local/lib/libcppkafka.so)
 target_link_libraries(JasmineGraph ${PYTHON_LIBRARIES})
 target_link_libraries(JasmineGraph m)
-
-set(PYTHON_EXECUTABLE "/usr/bin/python3.8")
-set(PYTHON_INCLUDE_DIR "/usr/include/python3.8m")
-set(PYTHON_LIBRARIES "/usr/lib/x86_64-linux-gnu/libpython3.8m.so")
